objects/csord__Order__c.object
<CustomObject>
    <description>The central object in the process of setting up the whole solution. Lives only as long as is needed for the fulfillment process to finish.</description>
    <fields>
        <fullName>Installation_Date_Time__c</fullName>
        <label>Installation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Socket_Move__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapped after o&amp;s is done from OE Cable Socket JSON</description>
        <inlineHelpText>Is a TV Socket available at the installation address?</inlineHelpText>
        <label>Socket Move</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Is_Porting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is true if any product configuration belonging to that order has number portings.</description>
        <label>Is Porting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Process_Terms__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>Used in the Orchestrator process for branching(condition steps)</description>
        <label>Process Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Abbreviations__c</fullName>
        <label>Product Abbrevations</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Reschedule_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If marked, provisioning process will enter the branch for rescheduling the order (changing the wish date).</description>
        <inlineHelpText>If marked, provisioning process will enter the branch for rescheduling the order (changing the wish date).</inlineHelpText>
        <label>Reschedule Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Move__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates does Order has Site Move in underlying services/product configurations.</description>
        <inlineHelpText>Indicates does Order has Site Move in underlying services/product configurations.</inlineHelpText>
        <label>Site Move</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Wish_Date_Today_or_Past__c</fullName>
        <formula>UPC_Termination_Wish_Date__c  &lt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Termination Wish Date Today or Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Wish_Date__c</fullName>
        <label>Termination Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that currently receives this order</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Cease_Category__c</fullName>
        <description>DEPRECATED. Main category to indicate why the service has been ceased</description>
        <inlineHelpText>DEPRECATED. Select the main category for the service cease</inlineHelpText>
        <label>Cease Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial / Admin</fullName>
                </value>
                <value>
                    <fullName>Non-renewal - Preferred Supplier</fullName>
                </value>
                <value>
                    <fullName>Non-renewal - Product Not Required</fullName>
                </value>
                <value>
                    <fullName>Non-renewal - Service Issues</fullName>
                </value>
                <value>
                    <fullName>Product Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Regrade</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Cease_Reason_Comment__c</fullName>
        <description>DEPRECATED. Free text reason for the cease order, supporting the selected category and reason code</description>
        <inlineHelpText>DEPRECATED. Enter a short comment about why the cease order has been raised</inlineHelpText>
        <label>Cease Reason Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csord__Cease_Reason__c</fullName>
        <description>DEPRECATED. The main reason for ceasing the service</description>
        <inlineHelpText>DEPRECATED. Select the main reason for ceasing the service</inlineHelpText>
        <label>Cease Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>csord__Cease_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Error</fullName>
                </value>
                <value>
                    <fullName>Ceased Trading / Liquidation / Merged</fullName>
                </value>
                <value>
                    <fullName>Consolidation to Major Supplier</fullName>
                </value>
                <value>
                    <fullName>Customer Service - Lack of update</fullName>
                </value>
                <value>
                    <fullName>Office Closed</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Price Renegotiation</fullName>
                </value>
                <value>
                    <fullName>Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Product Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Services now In-House</fullName>
                </value>
                <value>
                    <fullName>Support - resolution took too long</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Cease_Stage__c</fullName>
        <description>DEPRECATED. Defines the cease stages for orders</description>
        <inlineHelpText>DEPRECATED.</inlineHelpText>
        <label>Cease Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>csord__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation Stopped</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation Confirmed</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation Authorised</fullName>
                </value>
                <value>
                    <fullName>Replacement Active</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Customer_Order_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A customer-facing order number to identify this Order</description>
        <externalId>true</externalId>
        <inlineHelpText>A customer-facing order number to identify this Order</inlineHelpText>
        <label>Customer Order Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Desired_Cease_Date__c</fullName>
        <description>DEPRECATED. The date the customer would like the service to be ceased</description>
        <inlineHelpText>DEPRECATED. Enter the date the customer would like the service to be ceased</inlineHelpText>
        <label>Desired Cease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__End_Date__c</fullName>
        <description>The date the order ended</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <inlineHelpText>DEPRECATED.</inlineHelpText>
        <label>Order Group</label>
        <referenceTo>csord__Order_Group__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order_Number__c</fullName>
        <description>An auto number defining the Order.</description>
        <displayFormat>ON{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>An auto number defining the Order.</inlineHelpText>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Order Request which introduced the latest changes to this Order.</description>
        <inlineHelpText>The Order Request which introduced the latest changes to this Order.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order_Type__c</fullName>
        <description>Type of the order</description>
        <inlineHelpText>Type of the order. The value should be one of: Subscription Creation, Subscription Change or Product Delivery</inlineHelpText>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Primary_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used if the Order is introducing changes/additions to a solution created by a previous, primary Order.</description>
        <inlineHelpText>Used if the Order is introducing changes/additions to a solution created by a previous, primary Order.</inlineHelpText>
        <label>Primary Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Secondary Orders</relationshipLabel>
        <relationshipName>Secondary_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only in the context of Product Delivery order type. The asset / physical aspect being delivered could apply to child services but due to the modelling this may be unknown.</description>
        <inlineHelpText>This is the service for which the Product Delivery order is attached to. Note that the related service might be the placeholder for child services that actually use the item that has been order.</inlineHelpText>
        <label>Related Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Delivery Orders</relationshipLabel>
        <relationshipName>Delivery_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Solution of this Order</description>
        <inlineHelpText>The parent Solution of this Order</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Start_Date__c</fullName>
        <description>Start date of the order</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Status2__c</fullName>
        <description>The status of the Order in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Status_Reason__c</fullName>
        <description>DEPRECATED. Reason explaining the status of the order</description>
        <inlineHelpText>DEPRECATED.</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>csord__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Regrade Down (Lesser product)</fullName>
                </value>
                <value>
                    <fullName>Regrade Up (Higher product)</fullName>
                </value>
                <value>
                    <fullName>Down-grade (Same product)</fullName>
                </value>
                <value>
                    <fullName>Up-grade (Same product)</fullName>
                </value>
                <value>
                    <fullName>Backup (to primary order)</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Price Change / Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Price Change / Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Non-payment</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Customer Requests Cease</fullName>
                </value>
                <value>
                    <fullName>Account Manager Confirms Cease</fullName>
                </value>
                <value>
                    <fullName>Customer Retained</fullName>
                </value>
                <value>
                    <fullName>Customer Cease Actioned</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Customer cancellation - no longer required</fullName>
                </value>
                <value>
                    <fullName>Customer site not suitable</fullName>
                </value>
                <value>
                    <fullName>No Supplier capacity available</fullName>
                </value>
                <value>
                    <fullName>Supplier cannot deliver order</fullName>
                </value>
                <value>
                    <fullName>Wayleave permission denied</fullName>
                </value>
                <value>
                    <fullName>Excess charges not agreed by the Customer</fullName>
                </value>
                <value>
                    <fullName>Speed not available</fullName>
                </value>
                <value>
                    <fullName>Incorrect Quote</fullName>
                </value>
                <value>
                    <fullName>Suspension lifted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>DEPRECATED. Defines the status of the order through fulfilment to delivery.</description>
        <inlineHelpText>DEPRECATED. Use Status2__c.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Provisioning</fullName>
                    <default>true</default>
                    <label>In Provisioning</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Not Provisioned</fullName>
                </value>
                <value>
                    <fullName>Pending Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Total_One_Off_Charges__c</fullName>
        <description>Sum of all the charges on all of the delivery order’s line items</description>
        <inlineHelpText>Sum of all the charges on all of the delivery order’s line items</inlineHelpText>
        <label>Total One-Off Charges</label>
        <summarizedField>csord__Order_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryForeignKey>csord__Order_Line_Item__c.csord__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Cancelled_By_Change_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled By Change Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Parent_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup based hierarchy filled with the Configurator mapping</description>
        <label>Parent Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Orders (Parent Product Configuration)</relationshipLabel>
        <relationshipName>ParentProductConfigurationOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Participating_in_Inflight_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the order is undergoing an in-flight change, this field will be cheked</description>
        <inlineHelpText>If the order is undergoing an in-flight change, this field will be cheked</inlineHelpText>
        <label>Participating in Inflight Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Point_of_No_Return_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inflight change is not possible on an Order whose child delivery order has this checkbox ticked</description>
        <inlineHelpText>Inflight change is not possible on an Order whose child delivery order has this checkbox ticked</inlineHelpText>
        <label>Point of No-Return Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Configuration lookup, basically 1:1 relationship, the lookup value is used only in Product Delivery typed orders</description>
        <inlineHelpText>Product Configuration lookup for Product Delivery typed orders</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>csord__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>csord__External_Identifier2__c</columns>
        <columns>csord__Identification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>csord__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>csord__Cease_Order</fullName>
        <active>true</active>
        <description>Cease Order record type</description>
        <label>Cease Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>csord__Change_Order</fullName>
        <active>true</active>
        <description>Change Order record type</description>
        <label>Change Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>csord__New_Order</fullName>
        <active>true</active>
        <description>New Order record type</description>
        <label>New Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>